# asciimp

./: CMakeLists.txt  LICENSE  main.cpp
include/: argument_parser.h  ascii_media_player.h
src/: ascii_media_player.cpp
